add price per item on carousel

--- a/index.html
+++ b/index.html
@@ -316,16 +316,48 @@
             <section id="apparelcarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" id="blackShirt" src="pictures/black-shirt.jpg" alt="Second slide">
+                        <img class="d-block w-100" id="blackShirt" src="pictures/black-shirt.jpg" alt="First slide">
+                        <section class="carouselbuy">
+                            <p class="carousel-price">$20.00</p>
+                            <section class="carousel-adjust-quantity">
+                                <i class="material-icons">remove</i>1
+                                <i class="material-icons">add</i>
+                            </section>
+                            <button class="carousel-addToCart" type="button">ADD TO CART</button>
+                        </section>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" id="burgundyShirt" src="pictures/burgundy-shirt.jpg" alt="Third slide">
+                        <img class="d-block w-100" id="burgundyShirt" src="pictures/burgundy-shirt.jpg" alt="Second slide">
+                        <section class="carouselbuy">
+                            <p class="carousel-price">$30.00</p>
+                            <section class="carousel-adjust-quantity">
+                                <i class="material-icons">remove</i>1
+                                <i class="material-icons">add</i>
+                            </section>
+                            <button class="carousel-addToCart" type="button">ADD TO CART</button>
+                        </section>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" id="hat" src="pictures/dad-hat.png" alt="Fifth Slide">
+                        <img class="d-block w-100" id="hat" src="pictures/dad-hat.png" alt="Third Slide">
+                        <section class="carouselbuy">
+                            <p class="carousel-price">$15.00</p>
+                            <section class="carousel-adjust-quantity">
+                                <i class="material-icons">remove</i>1
+                                <i class="material-icons">add</i>
+                            </section>
+                            <button class="carousel-addToCart" type="button">ADD TO CART</button>
+                        </section>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" id="whiteShirt" src="pictures/white-shirt.jpg" alt="Twelfth Slide">
+                        <img class="d-block w-100" id="whiteShirt" src="pictures/white-shirt.jpg" alt="Fourth Slide">
+                        <section class="carouselbuy">
+                            <p class="carousel-price">$20.00</p>
+                            <section class="carousel-adjust-quantity">
+                                <i class="material-icons">remove</i>1
+                                <i class="material-icons">add</i>
+                            </section>
+                            <button class="carousel-addToCart" type="button">ADD TO CART</button>
+                        </section>
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#apparelcarousel" role="button" data-slide="prev">
@@ -340,10 +372,26 @@
             <section id="musiccarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" id="CD" src="pictures/album-art.jpg" alt="First slide">
+                        <img class="d-block w-100" id="CD" src="pictures/album-art.jpg" alt="Fifth slide">
+                        <section class="carouselbuy">
+                            <p class="carousel-price">$5.00</p>
+                            <section class="carousel-adjust-quantity">
+                                <i class="material-icons">remove</i>1
+                                <i class="material-icons">add</i>
+                            </section>
+                            <button class="carousel-addToCart" type="button">ADD TO CART</button>
+                        </section>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" id="vinyl" src="pictures/vinyl.png" alt="Eleventh Slide">
+                        <img class="d-block w-100" id="vinyl" src="pictures/vinyl.png" alt="Sixth Slide">
+                        <section class="carouselbuy">
+                            <p class="carousel-price">$10.00</p>
+                            <section class="carousel-adjust-quantity">
+                                <i class="material-icons">remove</i>1
+                                <i class="material-icons">add</i>
+                            </section>
+                            <button class="carousel-addToCart" type="button">ADD TO CART</button>
+                        </section>
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#musiccarousel" role="button" data-slide="prev">
@@ -359,15 +407,47 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img class="d-block w-100" id="cymbal" src="pictures/music-video-cymbal.jpg" alt="Seventh Slide">
+                        <section class="carouselbuy">
+                            <p class="carousel-price">$30.00</p>
+                            <section class="carousel-adjust-quantity">
+                                <i class="material-icons">remove</i>1
+                                <i class="material-icons">add</i>
+                            </section>
+                            <button class="carousel-addToCart" type="button">ADD TO CART</button>
+                        </section>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" id="poster1" src="pictures/poster-1.jpg" alt="Eigth Slide">
+                        <section class="carouselbuy">
+                            <p class="carousel-price">$5.00</p>
+                            <section class="carousel-adjust-quantity">
+                                <i class="material-icons">remove</i>1
+                                <i class="material-icons">add</i>
+                            </section>
+                            <button class="carousel-addToCart" type="button">ADD TO CART</button>
+                        </section>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" id="poster2" src="pictures/poster-2.jpg" alt="Ninth Slide">
+                        <section class="carouselbuy">
+                            <p class="carousel-price">$5.00</p>
+                            <section class="carousel-adjust-quantity">
+                                <i class="material-icons">remove</i>1
+                                <i class="material-icons">add</i>
+                            </section>
+                            <button class="carousel-addToCart" type="button">ADD TO CART</button>
+                        </section>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" id="poster3" src="pictures/poster-3.jpg" alt="Tenth Slide">
+                        <section class="carouselbuy">
+                            <p class="carousel-price">$5.00</p>
+                            <section class="carousel-adjust-quantity">
+                                <i class="material-icons">remove</i>1
+                                <i class="material-icons">add</i>
+                            </section>
+                            <button class="carousel-addToCart" type="button">ADD TO CART</button>
+                        </section>
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#collectiblescarousel" role="button" data-slide="prev">
@@ -382,10 +462,26 @@
             <section id="ticketscarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" id="augShow" src="pictures/aug18show.jpg" alt="Fourth Slide">
+                        <img class="d-block w-100" id="augShow" src="pictures/aug18show.jpg" alt="Eleventh Slide">
+                        <section class="carouselbuy">
+                            <p class="carousel-price">$5.00</p>
+                            <section class="carousel-adjust-quantity">
+                                <i class="material-icons">remove</i>1
+                                <i class="material-icons">add</i>
+                            </section>
+                            <button class="carousel-addToCart" type="button">ADD TO CART</button>
+                        </section>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" id="julyShow" src="pictures/july21show.jpg" alt="Sixth Slide">
+                        <img class="d-block w-100" id="julyShow" src="pictures/july21show.jpg" alt="Twelth Slide">
+                        <section class="carouselbuy">
+                            <p class="carousel-price">$8.00</p>
+                            <section class="carousel-adjust-quantity">
+                                <i class="material-icons">remove</i>1
+                                <i class="material-icons">add</i>
+                            </section>
+                            <button class="carousel-addToCart" type="button">ADD TO CART</button>
+                        </section>
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#ticketscarousel" role="button" data-slide="prev">
@@ -400,7 +496,7 @@
             </div>
         </div>
 
-        <section class="carouselbuy">
+        <!-- <section class="carouselbuy">
             <p class="carousel-price">$20.00</p>
             <section class="carousel-adjust-quantity">
                 <i class="material-icons">remove</i>1
@@ -409,7 +505,7 @@
             <button class="carousel-addToCart" type="button">ADD TO CART</button>
         </section>
         </div>
-    </section>
+    </section> -->
     <!-- End Carousel Section -->
 
     <!--CODE FOR SLIDE OUT CART-->
